third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/extern_shared_struct.rs
#![deny(deprecated)]

#[cxx::bridge]
pub mod ffi {
    struct StructX {
        a: u64,
    }

    #[namespace = "mine"]
    unsafe extern "C++" {
        type StructX;
    }
}

fn main() {}
